# toy-rpc

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  Readme.md  book.toml
book/: 01_introduction.md  02_quickstart.md  03_define_service.md  04_server.html  04_server.md  04a_async_std.html  04a_async_std.md  04b_tokio.md  05_integration.md  05a_actix_web.md  05a_cancellation.html  05b_tide.md  05c_warp.md  06_client.md  06a_cancellation.md  06b_timeout.md  07_examples.md  07_tls.md  08_pubsub.md  10_change_log.md  10_preview.md  10a_alpha.1.md  10b_alpha.2.md  SUMMARY.md  print.html
definitions/: Cargo.toml
definitions/src/: async_service.rs  error.rs  lib.rs  service.rs  sync_service.rs
docs/: 01_introduction.html  02_quickstart.html  03_define_service.html  04_server.html  04a_async_std.html  04b_tokio.html  04d_tide.html  05_integration.html  05a_actix_web.html  05b_tide.html  05b_timeout.html  05c_warp.html  06_client.html  06a_cancellation.html  06b_timeout.html  07_examples.html  07_tls.html  08_pubsub.html  09_examples.html  10_change_log.html  10_preview.html  10a_alpha.1.html  10b_alpha.2.html  404.html  book.toml  change_log.html  index.html  print.html  searchindex.js  searchindex.json
docs/book/: 02_quickstart.html  03_define_service.html  04b_tokio.html  04c_actix_web.html  04e_warp.html  05_client.html  06_examples.html  07_change_log.html  404.html  searchindex.js  searchindex.json
docs/src/: 01_introduction.md  02_quickstart.md  04a_async_std.md  SUMMARY.md
examples/: async_test.rs  client_side.rs  macro_test.rs  server_side.rs
examples/actix_v3_integration/: Cargo.toml
examples/actix_v3_integration/src/: rpc.rs
examples/actix_web_integration/: Cargo.toml
examples/actix_web_integration/src/: lib.rs
examples/async_std_tcp/: Cargo.toml
examples/async_std_tcp/src/: rpc.rs
examples/async_std_tls/: Cargo.toml
examples/async_std_tls/certs/: service.key  service.pem
examples/async_std_tls/src/: lib.rs
examples/axum_integration/: Cargo.toml
examples/axum_integration/src/: lib.rs
examples/cancel_and_timeout/: Cargo.toml
examples/cancellation/: Cargo.toml
examples/cancellation/src/: rpc.rs
examples/docs_examples/: Cargo.toml
examples/docs_examples/src/: lib.rs
examples/example-client/: Cargo.toml
examples/example-client/src/: main.rs
examples/example-server/: Cargo.toml
examples/example-server/src/: main.rs
examples/example-service/: Cargo.toml
examples/example-service/src/: lib.rs
examples/macro_expand/: Cargo.toml
examples/macro_expand/src/: lib.rs
examples/multi-client/: Cargo.toml
examples/raw_tcp/: Cargo.toml
examples/server_client/: Cargo.toml  Readmd.md  Readme.md
examples/server_client/src/: rpc.rs
examples/tide_integration/: Cargo.toml  README.md
examples/tide_integration/src/: rpc.rs
examples/tide_tls/: Cargo.toml  Readme.md
examples/tide_tls/src/: rpc.rs
examples/tokio_pubsub/: Cargo.toml
examples/tokio_pubsub/src/: lib.rs
examples/tokio_tcp/: Cargo.toml
examples/tokio_tcp/src/: rpc.rs
examples/tokio_tls/: Cargo.toml  Readme.md
examples/tokio_tls/certs/: ca.cert
examples/warp_integration/: Cargo.toml
examples/warp_tls/: Cargo.toml
examples/websocket/: Cargo.toml
examples/websocket/src/: lib.rs  rpc.rs
macros/: Cargo.toml  Readme.md
macros/src/: lib.rs  util.rs
macros/src/util/: item_impl.rs  item_trait.rs  mod.rs
src/: client.rs  error.rs  lib.rs  macros.rs  message.rs  rpc.rs  server.rs  service.rs
src/client/: async_std.rs  mod.rs  tokio.rs
src/codec/: async_std.rs  bincode.rs  cbor.rs  json.rs  mod.rs  rmp.rs  tokio.rs
src/codec/json/: async_std.rs  mod.rs  tokio.rs
src/server/: async_std.rs  http_actix_web.rs  http_tide.rs  http_warp.rs  mod.rs  tokio.rs
src/transport/: byte_channel.rs  chan.rs  frame.rs  http_chunk.rs  mod.rs  ws.rs
src/transport/frame/: async_std.rs  mod.rs  tokio.rs
src/transport/ws/: mod.rs  tide_ws.rs  warp_ws.rs
tests/: async_std_tcp.rs  rpc.rs  sample_test.rs
toy-rpc/: Cargo.toml  Makefile.toml  Readme.md
toy-rpc-client/: Cargo.toml  Readme.md
toy-rpc-client/src/: async_std.rs  broker.rs  lib.rs  reader.rs  tokio.rs  writer.rs
toy-rpc-core/: Cargo.toml  Readme.md
toy-rpc-core/src/: error.rs  lib.rs  message.rs  service.rs  util.rs
toy-rpc-core/src/codec/: bincode.rs  cbor.rs  mod.rs  rmp.rs
toy-rpc-core/src/codec/json/: async_std.rs  mod.rs
toy-rpc-core/src/codec/split/: client.rs  mod.rs  server.rs
toy-rpc-core/src/transport/: frame.rs  mod.rs
toy-rpc-core/src/transport/ws/: mod.rs
toy-rpc-macros/: Cargo.toml
toy-rpc-server/: Cargo.toml  Readme.md
toy-rpc-server/src/: async_std.rs  builder.rs  http_actix_web.rs  http_tide.rs  http_warp.rs  lib.rs  tokio.rs
toy-rpc/src/: context.rs  error.rs  lib.rs  macros.rs  message.rs  protocol.rs  pubsub.rs  request.rs  service.rs  util.rs
toy-rpc/src/client/: async_std.rs  broker.rs  builder.rs  call.rs  engine.rs  mod.rs  pubsub.rs  reader.rs  tokio.rs  writer.rs
toy-rpc/src/client_new/: async_std.rs  mod.rs  tokio.rs
toy-rpc/src/client_old/: async_std.rs  mod.rs
toy-rpc/src/codec/: async_std.rs  bincode.rs  cbor.rs  mod.rs  rmp.rs  split.rs  tokio.rs
toy-rpc/src/codec/json/: async_std.rs  mod.rs  tokio.rs
toy-rpc/src/codec/split/: client.rs  mod.rs  server.rs
toy-rpc/src/server/: async_std.rs  broker.rs  builder.rs  http_actix_web.rs  http_actix_web_new.rs  http_tide.rs  http_warp.rs  mod.rs  pubsub.rs  reader.rs  runtime.rs  tokio.rs  writer.rs
toy-rpc/src/server/integration/: http_actix_web.rs  http_axum.rs  http_tide.rs  http_warp.rs  mod.rs
toy-rpc/src/server/pubsub/: mod.rs  publisher.rs  subscriber.rs
toy-rpc/src/transport/: frame.rs  mod.rs
toy-rpc/src/transport/ws/: axum_ws.rs  mod.rs  tide_ws.rs  warp_ws.rs
toy-rpc/src/util/: engine.rs  mod.rs
toy-rpc/tests/: actix_web_integration.rs  async_std_tcp.rs  async_std_ws.rs  axum_integration.rs  rpc.rs  sample_test.rs  tide_integration.rs  tokio_tcp.rs  tokio_ws.rs  warp_integration.rs
