[package]
name = "toy-rpc"
version = "0.5.0-beta.1"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"
description = "An async-std based RPC library that mimics the API of golang net/rpc"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/toy-rpc/0.4.4/toy_rpc/"
homepage = "https://github.com/minghuaw/toy-rpc"
repository = "https://github.com/minghuaw/toy-rpc"
keywords = ["async", "rpc", "go", "golang", "async-std", "tokio"]
categories = ["network-programming", "asynchronous"]
readme = "Readme.md"
exclude = [
    "examples/*",
    "transport/*",
    ".gitignore",
    ".idea/*",
    ".vscode/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = [
    "std", 
    "serde_bincode",
    "tokio_runtime"
]

docs = ["default", "actix-web"]

std = ["serde/std"]
serde_bincode = []
serde_rmp = ["rmp-serde"]
tokio_runtime = ["tokio", "async-tungstenite/tokio-runtime", "tokio-stream"]
async_std_runtime = ["async-std", "async-tungstenite/async-std-runtime"]
http_tide = ["tide", "async_std_runtime"]
http_actix_web = ["actix-web", "tokio_runtime"]
http_warp = ["warp", "tokio_runtime"]

[dev-dependencies]
async-std = "1.9.0"

[dependencies]
# local imports
# toy-rpc-macros = { path="macros", version = "0.1.0" }
toy-rpc-macros = "0.1.0"

# feature gated optional dependecies
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11", optional = true }
rmp-serde = { version = "0.15", optional = true }
tide = { version = "0.15.1", optional = true }
# surf = { version = "2.1.0", optional = true }
actix-web = { version = "3.3", optional = true }
warp = { version = "0.3.0", optional = true }
async-std = { version = "1.9.0", optional = true }
tokio = { version = "1.1.1", features = ["rt", "rt-multi-thread", "sync", "io-util"], optional = true }
tokio-stream = {  version = "0.1.2", features = ["net"], optional = true }

bincode = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
futures = "0.3"
async-trait = "0.1"
pin-project = "1.0"
log = "0.4"
lazy_static = "1.4.0"
url = "2.2.0"

# websocket dependencies, consider feature gating in the future
tungstenite = "0.12.0"
async-tungstenite = { version = "0.12.0" }
tide-websockets = "0.1.0"
# tokio-tungstenite = "0.13.0"
actix-web-actors = "3.0.0"
actix-http = "2.2.0"
tokio-util = { version = "0.3.1", features = ["codec"] }
bytes = "1.0.1"
actix = "0.10.0"

[workspace]
members = [
    "macros",
]

exclude = [
    "examples/async_std_tcp",
    "examples/tokio_tcp",
    "examples/tide_integration",
    "examples/actix_v3_integration",
    "examples/websocket",
    "examples/warp_integration",
]
