[workspace]
members = [
    "macros",
    "toy-rpc",
]

exclude = [
    "examples/async_std_tcp",
    "examples/tokio_tcp",
    "examples/tide_integration",
    "examples/actix_v3_integration",
    "examples/websocket",
    "examples/warp_integration",
    "examples/docs_examples",
    "examples/macro_expand",
    "examples/cancel_and_timeout",
    "examples/example-service",
    "examples/example-server",
    "examples/example-client",
    "examples/tokio_tls",
]