[package]
name = "toy_rpc_definitions"
version = "0.1.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = "0.3.12"
async-std = "1.6.3"
serde = "1.0.116"
serde_json = "1.0.57"
bincode = "1.3.1"



