[package]
name = "toy_rpc_definitions"
version = "0.1.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async_service"]

async_service = []

[dependencies]
erased-serde = "0.3.12"
async-std = "1.6.4"
serde = "1.0.116"
serde_json = "1.0.57"
bincode = "1.3.1"
async-trait = "0.1.40"
futures = "0.3.5"



