[package]
name = "toy-rpc-macros"
version = "0.1.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.51", features = ["full", "derive", "extra-traits"] }
quote = { version = "1.0.7" }
