[package]
name = "toy-rpc-macros"
version = "0.6.0-beta"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"
description = "Macros for toy-rpc"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/toy-rpc-macros/0.5.0-alpha/toy_rpc_macros/"
homepage = "https://github.com/minghuaw/toy-rpc"
repository = "https://github.com/minghuaw/toy-rpc"
keywords = ["async", "rpc", "go", "golang", "async-std"]
categories = ["network-programming", "asynchronous"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

server = []
client = []
runtime = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1", features = ["full", "derive", "extra-traits"] }
quote = { version = "^1" }
darling = "0.13.0"
