[package]
name = "toy-rpc-client"
version = "0.7.5"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"
description = "An async RPC that mimics golang net/rpc's usage and supports both async-std and tokio"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/toy-rpc/"
homepage = "https://github.com/minghuaw/toy-rpc"
repository = "https://github.com/minghuaw/toy-rpc"
keywords = ["async", "rpc", "go", "async-std", "tokio"]
categories = ["network-programming", "asynchronous"]
readme = "Readme.md"

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = [ ]

docs = [ ]
tls = ["rustls", "tokio-rustls", "async-rustls", "webpki", "toy-rpc-core/tls"]

tokio_runtime = [ "tokio", "async-tungstenite/tokio-runtime" ]
async_std_runtime = [ "async-std", "async-tungstenite/async-std-runtime", ]

serde_bincode = ["toy-rpc-core/serde_bincode"]
serde_json = ["toy-rpc-core/serde_json"]
serde_cbor = ["toy-rpc-core/serde_cbor"]
serde_rmp = ["toy-rpc-core/serde_rmp"]

[dependencies]
tokio = { version = "1", optional = true }
async-std = { version = "1", optional = true }
async-tungstenite = { version = "0.13", optional = true }

# TLS
rustls = { version = "0.19", optional = true }
tokio-rustls = { version = "0.22", optional = true }
async-rustls = { version = "0.2", optional = true }
webpki = { version = "0.21", optional = true }

cfg-if = "1.0"
tungstenite = "0.13"
flume = "0.10"
brw = { version = "0.1.4" }
log = "0.4"
futures = "0.3"
erased-serde = "^0.3.16"
pin-project = "1.0"
serde = { version = "1.0" }
async-trait = "0.1"
url = "2.2"

toy-rpc-core = { version = "0.7.5", path = "../toy-rpc-core", features = ["client"] }
