[package]
name = "toy-rpc-core"
version = "0.7.5"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"
description = "An async RPC that mimics golang net/rpc's usage and supports both async-std and tokio"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/toy-rpc/"
homepage = "https://github.com/minghuaw/toy-rpc"
repository = "https://github.com/minghuaw/toy-rpc"
keywords = ["async", "rpc", "go", "async-std", "tokio"]
categories = ["network-programming", "asynchronous"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]

default = [ ]
docs = [ ]

client = [ ]
server = [ ]

serde_bincode = [ ]
serde_rmp = ["rmp-serde"]
tls = ["webpki"]

[dependencies]
# feature gated optional dependecies
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11", optional = true }
rmp-serde = { version = "0.15", optional = true }
actix = { version = "0.10", optional = true }
warp = { version = "0.3", optional = true }
tide-websockets =  { version = "0.3", optional = true }
tokio = { version = "1", optional = true }
async-std = { version = "1", optional = true }
webpki = { version = "0.21", optional = true }

bincode = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "^0.3.16"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
lazy_static = "1.4"
tungstenite = "0.13"
thiserror = "1.0"
flume = "0.10"
pin-project = "1.0"
cfg-if = "1.0"
url = "2.2"

toy-rpc-macros = "0.5.0"
