[package]
name = "toy-rpc-server"
version = "0.7.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = [ ]

tokio_runtime = [ ]
async_std_runtime = [ ]
http_tide = [ ]
http_actix_web = [ ]
http_warp = [ ]

[dependencies]
