[package]
name = "toy-rpc-server"
version = "0.7.5"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"
description = "An async RPC that mimics golang net/rpc's usage and supports both async-std and tokio"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/toy-rpc/"
homepage = "https://github.com/minghuaw/toy-rpc"
repository = "https://github.com/minghuaw/toy-rpc"
keywords = ["async", "rpc", "go", "async-std", "tokio"]
categories = ["network-programming", "asynchronous"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]

default = [ ]
docs = [ "toy-rpc-core/docs" ]

tokio_runtime = [ "tokio", "async-tungstenite/tokio-runtime", "tokio-stream", "toy-rpc-core/tokio" ]
async_std_runtime = [ "async-std", "async-tungstenite/async-std-runtime", "toy-rpc-core/async-std"]
tls = ["rustls", "tokio-rustls", "async-rustls", "webpki", "toy-rpc-core/tls"]

http_tide = [ "tide", "tide-websockets", "async_std_runtime", "toy-rpc-core/tide-websockets" ]
http_warp = [ "warp", "tokio_runtime", "toy-rpc-core/warp" ]
http_actix_web = [ 
    "actix-web", "actix", "actix-rt", "actix-web-actors", "actix-http", 
    "tokio_runtime", "toy-rpc-core/actix"
]

serde_bincode = ["toy-rpc-core/serde_bincode"]
serde_json = ["toy-rpc-core/serde_json"]
serde_cbor = ["toy-rpc-core/serde_cbor"]
serde_rmp = ["toy-rpc-core/serde_rmp"]

[dependencies]
# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time"], optional = true }
tokio-stream = {  version = "0.1", features = ["net"], optional = true }
async-std = { version = "1", optional = true }

# WebSocket and HTTP integration
async-tungstenite = { version = "0.13", optional = true }
tide = { version = "0.16", optional = true }
tide-websockets =  { version = "0.3", optional = true }
warp = { version = "0.3", optional = true }
actix-web = { version = "3.3", optional = true }
actix = { version = "0.10", optional = true }
actix-rt = { version = "1.1.1", optional = true }
actix-web-actors = { version = "3.0", optional = true }
actix-http = { version = "2.2", optional = true }

# TLS
rustls = { version = "0.19", optional = true }
tokio-rustls = { version = "0.22", optional = true }
async-rustls = { version = "0.2", optional = true }
webpki = { version = "0.21", optional = true }

async-trait = "0.1"
erased-serde = "^0.3.16"
log = "0.4"
cfg-if = "1.0"
futures = "0.3"
flume = "0.10"
brw = { version = "0.1.4" }

toy-rpc-core = { version = "0.7.5", path = "../toy-rpc-core", features = ["server"] }