[package]
name = "toy-rpc"
version = "0.7.0-alpha.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"
description = "An async RPC that mimics golang net/rpc's usage and supports both async-std and tokio"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/toy-rpc/0.6.1/toy_rpc/"
homepage = "https://github.com/minghuaw/toy-rpc"
repository = "https://github.com/minghuaw/toy-rpc"
keywords = ["async", "rpc", "go", "async-std", "tokio"]
categories = ["network-programming", "asynchronous"]
readme = "Readme.md"
exclude = [
    "examples/*",
    "transport/*",
    ".gitignore",
    ".idea/*",
    ".vscode/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = [
    "serde_bincode",
]

docs = []

std = ["serde/std"]

server = ["toy-rpc-macros/server"]
client = ["toy-rpc-macros/client"]

# feature flags for codec
serde_bincode = []
serde_rmp = ["rmp-serde"]

# feature flags for runtime
tokio_runtime = ["tokio", "async-tungstenite/tokio-runtime", "tokio-stream"]
async_std_runtime = ["async-std", "async-tungstenite/async-std-runtime"]
http_tide = ["tide", "tide-websockets", "async_std_runtime", "server"]
http_actix_web = ["actix-web", "actix", "actix-web-actors", "actix-http", "tokio_runtime", "server"]
http_warp = ["warp", "tokio_runtime", "server"]

[dev-dependencies]
async-std = "1.9.0"
anyhow = "1.0.38"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "sync", "io-util", "net"]}
warp = { version = "0.3" }
actix-rt = "1.1.1"
actix-web = "3.3"

[dependencies]
# local imports
toy-rpc-macros = { version = "0.5.0-alpha", path="../macros" }
# toy-rpc-macros = "0.4.1"

# feature gated optional dependecies
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11", optional = true }
rmp-serde = { version = "0.15", optional = true }
tide = { version = "0.16.0", optional = true }
tide-websockets =  { version = "0.3.0", optional = true }
actix-web = { version = "3.3", optional = true }
actix = { version = "0.10.0", optional = true }
actix-web-actors = { version = "3.0.0", optional = true }
actix-http = { version = "2.2.0", optional = true }
warp = { version = "0.3", optional = true }
async-std = { version = "1.9.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-util"], optional = true }
tokio-stream = {  version = "0.1.5", features = ["net"], optional = true }
async-tungstenite = { version = "0.13.1", optional = true }

bincode = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
futures = "0.3.15"
async-trait = "0.1"
log = "0.4"
lazy_static = "1.4.0"
url = "2.2.0"
cfg-if = "1.0.0"
tungstenite = "0.13.0"
thiserror = "1.0.24"
flume = "0.10.4"
pin-project = "1.0.7"

[[test]]
name = "async_std_tcp"
path = "tests/async_std_tcp.rs"
required-features = ["async_std_runtime", "server", "client"]

[[test]]
name = "tokio_tcp"
path = "tests/tokio_tcp.rs"
required-features = ["tokio_runtime", "server", "client"]

[[test]]
name = "async_std_ws"
path = "tests/async_std_ws.rs"
required-features = ["async_std_runtime", "server", "client"]

[[test]]
name = "tokio_ws"
path = "tests/tokio_ws.rs"
required-features = ["tokio_runtime", "server", "client"]

[[test]]
name = "tide_integration"
path = "tests/tide_integration.rs"
required-features = ["http_tide", "server", "client"]

[[test]]
name = "warp_integration"
path = "tests/warp_integration.rs"
required-features = ["http_warp", "server", "client"]

[[test]]
name = "actix_web_integration"
path = "tests/actix_web_integration.rs"
required-features = ["http_actix_web", "server", "client"]