[package]
name = "actix_v3_integration"
version = "0.1.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-rpc = { version = "0.5.0", path = "../..", default-features = false, features = ["serde_bincode", "http_actix_web"]}
actix-web = "3.3.2"
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync"] }

serde = { version = "1.0.117", features = ["derive"] }
async-trait = "0.1.42"
env_logger = "0.8.2"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 