[package]
name = "async_std_tcp"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

[dependencies]
async-std = { version = "1.9.0", features = [ "attributes", ] }  
async-trait = "0.1.42"
env_logger = "0.8.2"
futures = "0.3.12"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }
toy-rpc = { version = "0.5.0-beta.1", path = "../..", default-features = false, features = ["std", "serde_json", "async_std_runtime"]}