[package]
name = "async_std_tcp"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

[dependencies]
async-std = { version = "1.9.0", features = [ "attributes", ] }
log = "0.4.14"
env_logger = "0.8.3"

[dependencies.toy-rpc]
path = "../../toy-rpc/"
version = "0.8.3"
default-features = false
features = [ "serde_json", "async_std_runtime", "server", "client"]
