[package]
name = "axum_integration"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"]}
env_logger = "0.9.0"
async-trait = "0.1.50"
toy-rpc = {version = "0.8.0-beta.5", path = "../../toy-rpc", features = ["http_axum", "server", "client"]}
log = "0.4.14"
hyper = "0.14.11"
tower = "0.4.8"
axum = "0.1.2"
