[package]
name = "cancellation"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

[dependencies]
anyhow = "1.0.40"
async-std = { version = "1.9.0", features = [ "attributes", ] }
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
toy-rpc = { version = "0.7.0-alpha", path = "../../toy-rpc/" }
