[package]
name = "example-server"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
env_logger = "0.8.3"
log = "0.4.14"

# RPC service definition
example-service = { version = "0.1.0", path = "../example-service" }

# toy-rpc = { version = "0.7.5", features = ["tokio_runtime", "server"] }

[dependencies.toy-rpc]
version = "0.8.1"
path = "../../toy-rpc/"
features = [ "tokio_runtime", "server" ]
