[package]
name = "example-service"
version = "0.1.0"
authors = ["minghuaw <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]

[dependencies]
async-trait = "0.1.50"
# toy-rpc = "0.7.5"

[dependencies.toy-rpc]
version = "0.8.0-beta.4"
path = "../../toy-rpc/"
features = []