[package]
name = "macro_expand"
version = "0.1.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-rpc = { version = "0.7.0-alpha.0", path = "../../toy-rpc", features = ["server", "client"] }
async-trait = "0.1.42"
