[package]
name = "macro_expand"
version = "0.1.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# features for testing conditional compilation
server = ["toy-rpc/server"]
client = ["toy-rpc/client"]
async_std_runtime = ["toy-rpc/async_std_runtime"]
tokio_runtime = ["toy-rpc/tokio_runtime"]

[dependencies]
async-trait = "0.1.50"
serde = { version = "1.0.126", features = ["derive"] }
# toy-rpc-macros = { version = "0.5.0-alpha", path = "../../macros", features = ["server", "client"] }
toy-rpc = { , path = "../../toy-rpc", features = ["server", "client", "tokio_runtime"] }
