[package]
name = "server_client"
version = "0.1.0"
authors = ["Minghua Wu <michael.wu1107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
async-trait = "0.1.41"
async-std = { version = "1.7.0", features = [ "attributes", ] }  

toy-rpc = { version = "0.4.5", path = "../..", default-features = false, features = ["std", "serde_bincode", "tide", "surf"]}
log = "0.4.11"
env_logger = "0.8.2"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

